feat: implement shipping calculation
